# Falcor5_2

./: .gitignore  .gitmodules
Source/Falcor/: CMakeLists.txt
Source/Falcor/Core/: FalcorConfig.h  Sample.cpp  Window.cpp  Window.h
Source/Falcor/Core/API/: FBO.cpp  RenderContext.cpp  RenderContext.h
Source/Falcor/Core/API/D3D12/: D3D12Device.cpp  D3D12RenderContext.cpp
Source/Falcor/Core/Platform/Windows/: Windows.cpp
Source/Falcor/RenderGraph/: RenderGraphUI.cpp
Source/Falcor/Scene/Camera/: Camera.h
Source/Falcor/Utils/Scripting/: Console.cpp
Source/Falcor/Utils/Timing/: Profiler.cpp
Source/Falcor/Utils/UI/: Gui.cpp  Gui.h
Source/Samples/: CMakeLists.txt
Source/Samples/CreateTerrain/: CreateTerrain.cpp  CreateTerrain.sln  CreateTerrain.vcxproj  CreateTerrain.vcxproj.filters
Source/Samples/CreateTerrain/x64/Debug/: CreateTerrain.exe.recipe  CreateTerrain.ilk  CreateTerrain.vcxproj.FileListAbsolute.txt  vc143.idb
Source/Samples/CreateTerrain/x64/Release/: CreateTerrain.exe.recipe  CreateTerrain.iobj  CreateTerrain.ipdb
Source/Samples/Earthworks_4/: CMakeLists.txt  Earthworks_4.cpp  Earthworks_4.h  Sprites.cpp  Sprites.h  about.dds  atmosphere.cpp  atmosphere.h  cfd.cpp  cfd.h  computeShader.h  compute_terrain_under_mouse.hlsl  compute_tileBicubic.hlsl  compute_tileBuildLookup.hlsl  compute_tileDelaunay.hlsl  compute_tileEcotopes.hlsl  compute_tileNormals.hlsl  compute_tileSplitMerge.hlsl  compute_tileVertices.hlsl  ecotope.cpp  ecotope.h  glider.cpp  glider.h  glider_runtime.cpp  groundcover_defines.hlsli  imgui.ini  lastFile.xml  log.txt  pixelShader.cpp  pixelShader.h  render_Common.hlsli  render_Tiles.hlsl  render_spline.hlsl  render_splineTerrafector.hlsl  ribbonBuilder.cpp  ribbonBuilder.h  roadNetwork.cpp  roadNetwork.h  roads_Intersection.cpp  roads_Intersection.h  (+15 more)
Source/Samples/Earthworks_4/hlsl/: compute_clipLodAnimatePlants.hlsl  compute_fogCloudAtmosphereCommon.hlsli  compute_tileBicubic.hlsl  compute_tileBuildLookup.hlsl  compute_tileClear.hlsl  compute_tileDelaunay.hlsl  compute_tileEcotopes.hlsl  compute_tileElevationMipmap.hlsl  compute_tileJumpFlood.hlsl  compute_tileNormals.hlsl  compute_tilePassthrough.hlsl  compute_tileSplitMerge.hlsl  compute_tileVertices.hlsl  compute_tonemapper.hlsl  compute_volumeFog.hlsli  compute_volumeFogAtmosphericScatter.hlsl  groundcover_defines.hlsli  groundcover_functions.hlsli  materials.hlsli  render_Common.hlsli  render_Tiles.hlsl  render_meshTerrafector.hlsl  render_ribbons - Copy.hlsl  render_ribbons.hlsl  render_spline.hlsl  render_splineTerrafector.hlsl  render_tile_sprite.hlsl  render_triangles.hlsl  terrainDefines.hlsli
Source/Samples/Earthworks_4/hlsl/atmosphere/: compute_volumeFog.hlsli  compute_volumeFogAtmosphericScatter.hlsl
Source/Samples/Earthworks_4/hlsl/terrain/: compute_clipLodAnimatePlants.hlsl  compute_tileBicubic.hlsl  compute_tileBuildLookup.hlsl  compute_tileClear.hlsl  compute_tileEcotopes.hlsl  compute_tilePassthrough.hlsl  compute_vegetation_clear.hlsl  compute_vegetation_lod.hlsl  groundcover_defines.hlsli  materials.hlsli  render_Buildings_Far.hlsl  render_GliderWing.hlsl  render_Tiles.hlsl  render_cfdSlice.hlsl  render_meshTerrafector.hlsl  render_ribbons.hlsl  render_spline.hlsl  render_splineTerrafector.hlsl  render_thermalRibbons.hlsl  render_tile_sprite.hlsl  render_triangles.hlsl  render_vegetation_ribbons.hlsl  vegetation_defines.hlsli
Source/Samples/Earthworks_4/openJPH/: CMakeLists.txt
Source/Samples/Earthworks_4_OLD/: Earthworks_4.cpp  Earthworks_4.h  Earthworks_4.vcxproj  Earthworks_4.vcxproj.filters  computeShader.cpp  pixelShader.cpp  pixelShader.h  terrain.cpp  terrain.h
Source/Samples/Earthworks_4_OLD/Data/: gpuLights_functions.hlsli
Source/Samples/Earthworks_4_OLD/openJPH/: ojph_message.h
Source/Samples/Kolskoot/: CMakeLists.txt  Kolskoot.cpp  Kolskoot.h  PointGrey_Camera.cpp  PointGrey_Camera.h  SerialComms.cpp
Source/Samples/Kolskoot/harupdf/: hpdf.exp  hpdf.lib
Source/Samples/acsmp_physics_sandbox/: CMakeLists.txt  acsmp_physics_sandbox.cpp  acsmp_physics_sandbox.h  earthworks4_presets.xml  lastFile.xml
Source/Samples/acsmp_physics_sandbox/hlsl/: compute_tonemapper.hlsl
Source/Samples/createTerrainScripts/: createTerrainScripts.cpp  createTerrainScripts.sln  createTerrainScripts.vcxproj  createTerrainScripts.vcxproj.filters
Source/Samples/createTerrainScripts/x64/Debug/: createTerrainScripts.exe.recipe  createTerrainScripts.ilk  createTerrainScripts.vcxproj.FileListAbsolute.txt  vc143.idb
Source/Samples/createTerrainScripts/x64/Release/: createTerrainScripts.exe.recipe  createTerrainScripts.iobj  createTerrainScripts.ipdb
Source/Samples/ctrl_DirectWeapons3/: ctrl_DirectWeapons3.vcxproj  ctrl_DirectWeapons3.vcxproj.filters
Source/Samples/ctrl_DirectWeapons3/src/: QuickRange.cpp  QuickRange.h  SerialComms.h  Target.cpp  TargetManager.cpp  cameraAnim.cpp  cameraAnim.h  ctrl_DirectWeapons.cpp  ctrl_DirectWeapons_Ammunition.cpp  dw_Scenario.cpp  dw_Scenario.h  labview_lasershot.cpp  labview_lasershot.h  laneGUI.cpp  laneGUI.h
